--- a/assets/styles.css
+++ b/assets/styles.css
@@ -23,13 +23,15 @@ body {
 
 .cart {
   margin: 25px 100px;
-  float: right;
   border: 1px solid #d8d8d8;
   padding: 30px 30px;
+  margin-left: auto;
+  width: 50px;
+  justify-content: flex-end;
   background-color: white;
+  box-shadow: 2px 15px -12px rgba(0, 0, 0, 0.57);
   -webkit-box-shadow: 0px 2px 15px -12px rgba(0, 0, 0, 0.57);
   -moz-box-shadow: 0px 2px 15px -12px rgba(0, 0, 0, 0.57);
-  box-shadow: 2px 15px -12px rgba(0, 0, 0, 0.57);
 }
 
 .color-circle {
